2020-01-06  Alexandre Shannon  <alexandre.shannon@gmail.com>

	* R/init.R: Use curl::handle_setopt to set HTTP/1.1

2019-07-21  Chan-Yub Park  <mrchypark@gmail.com>

	* R/pushes.R: Set UTF-8 encoding in pbGetPosts

2019-07-21  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.3.2

	* README.md: Add dependencies badge

2019-07-20  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Expand authors / contributors list
	* README.md: Idem

	* R/setup.R: One more #nocov tag

2019-07-19  Dirk Eddelbuettel  <edd@debian.org>

	* R/setup.R: A few more #nocov tags

2019-07-18  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

	* R/init.R: Added #nocov tags
	* R/pushes.R: Renamed to pbGetPosts, added #nocov tags
	* man/pbGetPosts.Rd: Renamed

2019-07-17  Chan-Yub Park  <mrchypark@gmail.com>

	* R/pushes.R: Add pbGetPost function, modify .createPush
	* man/pbGetPost.Rd: Updated documentation

2019-07-11  Colin Gillespie  <colin@jumpingrivers.com>

	* R/setup.R (pbSetup): Read conffile after pbSetup

	* .gitignore: Ignore .rpushbullet.json

2017-11-02  Colin Gillespie  <colin@jumpingrivers.com>

	* R/setup.R: Set conffile to be readable only by the user

2017-04-13  Dirk Eddelbuettel  <edd@debian.org>

	* .travis.yml (env): Condition tests on having env.vars which PRs
	from forks will not have to not expose the secret token

	* R/setup.R (pbSetup): Typo/spelling fix suggested by Michael Chirico

2017-02-17  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.3.1

	* R/user.R: Do not run example
	* man/pbGetUser.Rd: Idem

2017-02-14  Dirk Eddelbuettel  <edd@debian.org>

	* R/init.R: Additional #nocov tags
	* R/isValid.R: Idem
	* R/pushes.R: Idem
	* R/setup.R: Idem

	* tests/simpleTests.R: Added calls to pbGetUser() etc

2017-02-11  Dirk Eddelbuettel  <edd@debian.org>

	* .rpushbullet.json.enc: Encoded configuration
	* .travis.yml: Decode configuration and run tests and coverage
