@@ -1,3 +1,10 @@
+2020-01-12  Dirk Eddelbuettel  <edd@debian.org>
+
+	* R/init.R (.getCurlHandle): Setting HTTP/1.1 is now conditional on a
+	new option "rpushbullet.useHTTP11" being set to TRUE
+	* R/pushes.R: Document new option
+	* man/pbPost.Rd: Idem
+
 2020-01-06  Alexandre Shannon  <alexandre.shannon@gmail.com>
 
 	* R/init.R: Use curl::handle_setopt to set HTTP/1.1
